--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "googleapis": "^156.0.0",
+    "redis": "^4.7.0",
     "xlsx": "^0.18.5"
   }
 }
